# riffscribe-django

./: .coveragerc  .dockerignore  .env.example  .gitignore  COMPLETE_STATUS.md  Dockerfile  LICENSE  Makefile  README.md  SETUP.md  docker-compose.prod.yml  docker-compose.yml  manage.py  package.json  pyproject.toml  pytest.ini  requirements-ml.txt  requirements.txt  tailwind.config.js  test_samples_standalone.py
.cursor/: Dockerfile.cursor  README.md  environment.json  setup.sh  supervisord.conf
examples/: advanced_transcription_demo.py
infrastructure/: .env.example  Makefile  README.md  __init__.py
infrastructure/aws/: Pulumi.yaml  __init__.py  __main__.py  services.py
infrastructure/configs/: dev.yaml  prod.yaml  staging.yaml
infrastructure/scripts/: deploy.py
infrastructure/shared/: __init__.py  config.py  utils.py
requirements/: all.txt  base.txt  dev.txt  ml.txt  production.txt  storage.txt
riffscribe/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
samples/: README.md  complex-riff.aac  complex-riff.flac  complex-riff.m4a  simple-riff.aac  simple-riff.flac  simple-riff.m4a
scripts/: docker-build.sh  docker-quick-build.sh  download_models.py  generate_sample_formats.py  test_pipeline.py
src/riffscribe_django/: __init__.py
templates/: base.html
templates/account/: login.html  signup.html
tests/: conftest.py  test_authentication.py  test_drum_transcriber.py  test_helpers.py  test_integration_drums.py  test_multi_track_drums.py
tests/e2e/: conftest.py  test_comment_e2e.py  test_comment_workflows.py  test_full_workflow.py  test_whisper_e2e.py  test_whisper_integration.py
tests/integration/: test_authentication.py  test_comment_workflows.py  test_drum_integration.py  test_file_uploads.py  test_full_transcription_pipeline.py  test_multi_track_drums.py  test_multitrack_workflow.py  test_transcription_pipeline.py  test_upload_fix.py  test_variant_views.py  test_views.py
tests/unit/: test_advanced_tasks.py  test_audio_processing.py  test_comment_model.py  test_export_manager.py  test_fingering_optimizer.py  test_ml_pipeline.py  test_ml_pipeline_whisper.py  test_models.py  test_multitrack_tasks.py  test_premium_features.py  test_status_view.py  test_tab_generator.py  test_tasks.py  test_tasks_whisper.py  test_variant_generator.py  test_whisper_integration.py  test_whisper_service.py
tests/unit/models/: test_comments.py  test_exports.py  test_transcriptions.py
tests/unit/services/: test_advanced_transcription.py  test_ai_pipeline.py  test_ai_transcription_agent.py  test_drum_transcriber.py  test_export_formats.py  test_export_manager.py  test_fingering_optimizer.py  test_humanizer_service.py  test_ml_pipeline.py  test_ml_pipeline_whisper.py  test_tab_ascii.py  test_tab_generator.py  test_variant_generator.py  test_whisper_integration.py  test_whisper_service.py
tests/unit/utils/: test_json_utils.py
tests/unit/views/: test_comment_forms.py  test_comment_views.py  test_export_views.py  test_media_views.py  test_status_view.py  test_transcription_views.py
transcriber/: audio_processing.py  baker_recipes.py  decorators.py  drum_transcriber.py  export_manager.py  fingering_optimizer.py  forms.py  json_utils.py  ml_pipeline.py  models.py  multi_track_service.py  storage.py  tab_generator.py  tasks.py  tasks_new.py  urls.py  urls_cbv.py  urls_media.py  urls_preview.py  variant_generator.py  views.py  views_cbv.py  views_old.py  views_preview.py  whisper_service.py
transcriber/management/commands/: fix_export_paths.py  generate_variants.py  seed_data.py  setup_oauth.py
transcriber/migrations/: 0001_initial.py  0002_add_playability_models.py  0003_add_whisper_analysis.py  0004_add_multi_track_models.py  0005_transcription_user_userprofile.py  0006_userprofile_comments_received_downvotes_and_more.py  0007_transcription_is_public.py  0008_track_confidence_score_transcription_accuracy_score_and_more.py
transcriber/services/: __init__.py  advanced_transcription_service.py  ai_music_transcription.py  ai_transcription_agent.py  crepe_service.py  export_manager.py  fingering_optimizer.py  humanizer_service.py  metrics_service.py  ml_pipeline.py  mt3_service.py  multi_track_service.py  omnizart_service.py  rate_limiter.py  simple_ai_transcription.py  variant_generator.py  whisper_service.py
transcriber/services/ai_transcription_agent/: __init__.py
transcriber/services/ai_transcription_agent/tools/: __init__.py  audio_prep.py  basic_pitch_tool.py  demucs_tool.py  gpt_analysis.py  result_combiner.py  whisper_tool.py
transcriber/static/transcriber/css/: input.css  style.css
transcriber/templates/transcriber/: base.html  comments.html  dashboard.html  detail.html  detail_updated.html  export.html  index.html  library.html  preview.html  profile.html  upload.html
transcriber/templates/transcriber/partials/: anonymous_comment_form.html  audio_player.html  audio_player_enhanced.html  auth_modal_container.html  auth_modal_forgot.html  auth_modal_signin.html  auth_modal_signup.html  comment_added.html  comment_flagged.html  comment_form.html  comments_list.html  export_all_status.html  export_button.html  export_error.html  export_link.html  export_pending.html  export_processing.html  export_section.html  export_status.html  favorite_button.html  karma_display.html  library_advanced_filters.html  library_search_bar.html  mobile_audio_controls.html  modal_base.html  practice_mode_panel.html  status.html  status_badge.html  status_header.html  status_progress.html  status_reprocess.html  status_steps.html  tab_display.html  tab_preview.html  tab_preview_mini.html  transcriptions_grid.html  transcriptions_grid_enhanced.html  upload_error.html  upload_success.html  variant_preview.html  (+6 more)
transcriber/templatetags/: custom_filters.py
transcriber/utils/: __init__.py  json_utils.py
transcriber/views/: ORGANIZATION.md  README.md  __init__.py  auth_modal.py  business_intelligence.py  comments.py  core.py  export.py  library.py  media.py  mixins.py  preview.py  progress.py  transcription.py  variants.py  voting.py
