[project]
name = "riffscribe-django"
version = "0.1.0"
description = "Convert audio to guitar tabs with AI - Django + HTMX version"
readme = "README.md"
authors = [
    { name = "abdul hamid", email = "abdulachik@icloud.com" }
]
requires-python = ">=3.11"
# Note: Dependencies are managed in requirements/ folder for better Docker layering
# Use: pip install -r requirements/base.txt -r requirements/ml.txt
dependencies = []

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.2",
    "pytest>=7.4",
    "pytest-django>=4.7",
    "black>=23.12",
    "ruff>=0.1",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
